--- a/.github/workflows/release-testing.yml
+++ b/.github/workflows/release-testing.yml
@@ -184,7 +184,7 @@ jobs:
         if: steps.version_check.outputs.version_changed == 'true' || github.event_name == 'workflow_dispatch'
         env:
           NODE_AUTH_TOKEN: ${{secrets.MOBILE_AGENT_NPM_TOKEN}}
-        run: npm publish
+        run: npm publish --provenance --access public
 
       - name: Capture logs if previous failure
         if: ${{ failure() }}
