--- a/.github/workflows/release-testing.yml
+++ b/.github/workflows/release-testing.yml
@@ -182,7 +182,9 @@ jobs:
 
       - name: Publish as NPM package on new relic account(we need npm secret from new relic account)
         if: steps.version_check.outputs.version_changed == 'true' || github.event_name == 'workflow_dispatch'
-        run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.MOBILE_AGENT_NPM_TOKEN}}
+        run: npm publish --provenance --access public
 
       - name: Capture logs if previous failure
         if: ${{ failure() }}
