feat: Update package name to scoped @newrelic
The package name has been changed from `newrelic-react-native-agent` to the scoped name `@newrelic/newrelic-react-native-agent`.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "newrelic-react-native-agent",
+  "name": "@newrelic/newrelic-react-native-agent",
   "version": "1.5.12",
   "description": "A New Relic Mobile Agent for React Native",
   "main": "./index.js",
